# image-pixelator

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
